# crufty

./: .gitignore  .projectile  Cargo.toml  README.md  build.rs  clear_netem.sh  gtags.conf  set_netem.sh
.cargo/: config
assets/rooms/: cave1.tmx  multi.json  multi.tmx
assets/shaders/: sprite.frag  sprite.vert  wireframe.frag
assets/textures/sprites/player/: animations.toml
src/: lib.rs  main.rs
src/application/: client.rs  gamestate.rs  input.rs  mod.rs  server.rs
src/application/client/: gamestate.rs  mod.rs
src/application/input/: intents.rs  mod.rs
src/application/server/: gamestate.rs  mod.rs
src/client/: mod.rs  net.rs  run_state.rs
src/components/: mod.rs
src/game/: animation.rs  events.rs  mod.rs
src/game/resource_store/: mod.rs  sprite_sheet_store.rs  texture_store.rs
src/net/: client.rs  impls.rs  mod.rs  protocol.rs  serde_impls.rs  server.rs  udp.rs
src/net/udp/: ackstat.rs  basic_conn.rs  congcontrol.rs  conn.rs  mock.rs  mod.rs  reliability.rs  seqnum.rs
src/resources/: mod.rs
src/server/: mod.rs  net.rs  run_state.rs
src/systems/: camera_system.rs  collision_system.rs  gravity_system.rs  intent_system.rs  interaction_system.rs  jump_system.rs  keyboard_system.rs  mod.rs  movement_system.rs  render_system.rs  sprite_sheet_animation_system.rs  ssanimation_system.rs  velocity_system.rs
src/util/: collision_world.rs  mod.rs  sprite_sheet_loader.rs  sprite_sheet_store.rs  texture_store.rs
src/v2/: mod.rs
