[package]
name = "crufty"
version = "0.0.1"
authors = ["Felix Rath <felixr@archlinux.info>"]
edition = "2018"
# features = ["glutin", "image", "nalgebra"]

[dependencies]
image = "0.20.1"
ecs = "0.23.1"
hprof = "0.1.3"
clock_ticks = "0.1.1"
num = "0.2.0"
ordered-float = "1.0.1"
toml = "0.4.8"
rand = "0.6.0"
typemap = "0.3.3"
glium = "0.22.0"
ncollide2d = "0.17.1"
lazy_static = "1.2.0"
enet = "0.2.0"
serde = "1.0.80"
serde_derive = "1.0.80"
bincode = "1.0.1"

[dependencies.nalgebra]
version = "0.16.10"
features = ["serde-serialize"]

[dependencies.smallvec]
version = "0.6.6"
features = ["serde"]

[patch.crates-io]
# ecs = { git = "https://github.com/HeroesGrave/ecs-rs.git" }
ecs = { path = "/home/felix/gits/ecs-rs" }
