[package]
name = "crufty"
version = "0.0.1"
authors = ["Felix Rath <felixr@archlinux.info>"]
edition = "2018"
build = "build.rs"
# features = ["glutin", "image", "nalgebra"]

[build-dependencies]
walkdir = "2"
vec_map = "0.8.1"

[dependencies]
image = "0.20.1"
ecs = "0.23.1"
hprof = "0.1.3"
clock_ticks = "0.1.1"
num = "0.2.0"
ordered-float = "1.0.1"
toml = "0.4.8"
rand = "0.6.0"
typemap = "0.3.3"
glium = "0.22.0"
ncollide2d = "0.19.2"
lazy_static = "1.2.0"
enet = "0.2.0"
serde = "1.0.80"
serde_derive = "1.0.80"
bincode = "1.0.1"
laminar = "0.3.0"

[dependencies.nalgebra]
version = "0.18.0"
features = ["serde-serialize"]

[dependencies.smallvec]
version = "0.6.6"
features = ["serde"]

[dependencies.vec_map]
version = "0.8.1"
features = ["serde"]

[patch.crates-io]
ecs = { git = "https://github.com/futile/ecs-rs.git" }
# ecs = { path = "/home/felix/gits/ecs-rs" }
