[package]
name = "crufty"
version = "0.0.1"
authors = ["Felix Rath <felixr@archlinux.info>"]
edition = "2018"
build = "build.rs"
default-run = "server"
# features = ["glutin", "image", "nalgebra"]

[build-dependencies]
walkdir = "2.2.9"
vec_map = "0.8.1"

[dependencies]
image = "0.22.1"
ecs = "0.23.1"
hprof = "0.1.3"
clock_ticks = "0.1.1"
num = "0.2.0"
ordered-float = "1.0.2"
toml = "0.5.1"
rand = "0.7.0"
typemap = "0.3.3"
glium = "0.25.1"
ncollide2d = "0.19.2"
lazy_static = "1.3.0"
enet = "0.2.2"
serde = "1.0.98"
serde_derive = "1.0.98"
bincode = "1.1.4"
laminar = "0.3.0"

[dependencies.nalgebra]
version = "0.18.0"
features = ["serde-serialize"]

[dependencies.smallvec]
version = "0.6.10"
features = ["serde"]

[dependencies.vec_map]
version = "0.8.1"
features = ["serde"]

[patch.crates-io]
ecs = { git = "https://github.com/futile/ecs-rs.git" }
# ecs = { path = "/home/felix/gits/ecs-rs" }
